changing title and icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/a.png" />
+    <link rel="icon" href="/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CodeCoreDevs Tech Company - Your partner in digital innovation. Specializing in [specify your services or expertise]."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="CodeCoreDevs, tech company, digital innovation, [specific keywords related to your services]"
+    />
+    <meta name="author" content="CodeCoreDevs Team" />
+    <meta property="og:title" content="CodeCoreDevs Tech Company" />
+    <meta
+      property="og:description"
+      content="Your partner in digital innovation. Specializing in tech services"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.codecoredevs.com" />
+    <meta
+      property="og:image"
+      content="https://www.codecoredevs.com/images/logo.png"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -43,7 +60,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CodeCoreDevs Tech Company</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
